--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: FuturaDemi;
+  src: url(./../fonts/FuturaCyrillicDemi.ttf) format('truetype');
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +20,7 @@
 :root {
   --font-family: 'Montserrat', sans-serif;
   --secondary-font-family: 'Futura', sans-serif;
+  --three-font-family: 'FuturaDemi', sans-serif;
   --page-background: #f4f4f4;
   --second-background: #ffffff;
   --three-background: #172139;
@@ -62,6 +69,8 @@ a {
 .main {
   padding-top: 30px;
   height: calc(100vh - 160px);
+  display: flex;
+  flex-direction: row;
 }
 
 .aside {
@@ -109,6 +118,12 @@ a {
   color: var(--page-background);
 }
 
+.title {
+  font-family: var(--three-font-family);
+  font-size: 2rem;
+  color: #000;
+}
+
 /*Стили Подвал*/
 .footer {
   display: flex;
@@ -151,4 +166,39 @@ a {
 
 .footer-block-text.text2 {
   margin-left: 30px;
+}
+
+.popap {
+  display: none;
+}
+
+.popap::backdrop {
+  background-color: rgba(23, 33, 57, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 998;
+}
+
+.popap-active {
+  display: block;
+  /* width: 440px;
+  height: 504px;
+  background-color: #ffffff;
+  position: absolute;
+  top: calc((100vh / 2) - 250px);
+  left: calc((100vw / 2) - 220px);
+  z-index: 999; */
+}
+
+.popap-container {
+  width: 440px;
+  height: 504px;
+  background-color: #ffffff;
+  position: absolute;
+  top: calc((100vh / 2) - 250px);
+  left: calc((100vw / 2) - 220px);
+  z-index: 999;
 }
