--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,18 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: FuturaMedium;
+  src: url(./../fonts/FuturaCyrillicMedium.ttf) format('truetype');
+  font-style: normal;
+}
+
+@font-face {
+  font-family: FuturaHeavy;
+  src: url(./../fonts/FuturaCyrillicHeavy.ttf) format('truetype');
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -21,10 +33,13 @@
   --font-family: 'Montserrat', sans-serif;
   --secondary-font-family: 'Futura', sans-serif;
   --three-font-family: 'FuturaDemi', sans-serif;
+  --four-font-family: 'FuturaHeavy', sans-serif;
+  --five-font-family: 'FuturaMedium', sans-serif;
   --page-background: #f4f4f4;
   --second-background: #ffffff;
   --three-background: #172139;
   --second-color: #ff6600;
+  --border-radius: 5px;
 }
 
 ul {
@@ -76,6 +91,7 @@ a {
 .aside {
   background-color: var(--second-background);
   width: 290px;
+  height: 420px;
 }
 .aside-menu-list-item {
   padding: 15px;
@@ -115,8 +131,11 @@ a {
   color: var(--page-background);
 }
 
+/*Стили страницы локаций*/
 .page-content {
-
+  margin-left: 30px;
+  height: 100%;
+  width: 100%;
 }
 
 .title {
@@ -125,6 +144,154 @@ a {
   color: #000;
 }
 
+.synchronization {
+  width: 336px;
+  height: 50px;
+  margin-top: 18px;
+  background-color: var(--three-background);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--border-radius);
+}
+
+.synchronization-text {
+  font-family: var(--three-font-family);
+  font-size: 10px;
+  color: var(--second-background);
+  margin-left: 10px;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container > div {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
+.container > label {
+  font-family: var(--font-family);
+  font-weight: 500;
+  margin-right: 25px;
+}
+
+.search {
+  width: 300px;
+  height: 50px;
+  background-color: var(--second-background);
+  border-radius: var(--border-radius);
+}
+
+.create-popap {
+  width: 286px;
+  height: 50px;
+  margin-top: 18px;
+  background-color: var(--three-background);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--border-radius);
+  margin-bottom: 44px;
+}
+
+.department {
+  height: 20px;
+  margin-bottom: 17px;
+  display: flex;
+  flex-direction: row;
+}
+
+.department-img1 {
+  margin: 0 15px;
+}
+
+.department-text1 {
+  font-family: var(--four-font-family);
+  font-size: 15px;
+}
+
+.department-text-title {
+  font-family: var(--three-font-family);
+  font-size: 15px;
+}
+
+.department-text-subtitle {
+  font-family: var(--five-font-family);
+  font-size: 15px;
+}
+
+.department-text2 {
+  font-family: var(--font-family);
+  color: var(--second-color);
+  font-size: 0.875rem;
+  margin: 0 30px;
+}
+
+.department-text3 {
+  font-family: var(--font-family);
+  font-size: 0.875rem;
+  margin-right: 30px;
+}
+
+.department-text4 {
+  font-family: var(--font-family);
+  font-size: 0.875rem;
+  font-weight: 800;
+  margin-right: 30px;
+}
+
+.sub-department {
+  margin-left: 45px;
+}
+
+.department-bottom {
+  margin-left: 103px;
+}
+
+.department-btns {
+  /* display: none; */
+  visibility: hidden;
+  cursor: pointer;
+}
+
+.department:hover > .department-btns {
+  visibility: visible;
+}
+
+.edit-popap {
+  margin-right: 20px;
+  font-family: var(--font-family);
+  color: var(--second-color);
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.edit-popap > img {
+  margin-right: 5px;
+}
+
+.delete {
+  margin-right: 20px;
+  font-family: var(--font-family);
+  font-weight: 600;
+  color: #ff5959;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.delete > img {
+  margin-right: 5px;
+}
+
+/*Стили страницы настроек*/
 .settings-content {
   margin-left: 50px;
   margin-bottom: 70px;
@@ -143,7 +310,7 @@ a {
   background-color: #ffffff;
   padding: 9.5px 36px;
   margin-right: 20px;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 
 .set-menu-list-item:last-child {
@@ -178,7 +345,7 @@ th {
 
 tr {
   height: 60px;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 
 tr:nth-child(odd) {
@@ -222,7 +389,7 @@ tr:nth-child(even) {
 .table-sort-text {
   padding: 7px 10px;
   border: 1px solid #efefef;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   background-color: #ffffff;
 }
 
@@ -276,7 +443,7 @@ tr:nth-child(even) {
   flex-shrink: 0;
   flex-grow: 0;
   border: 1px solid var(--second-color);
-  border-radius: 0.25em;
+  border-radius: var(--border-radius);
   margin-right: 0.5em;
   background-repeat: no-repeat;
   background-position: center center;
@@ -302,6 +469,7 @@ tr:nth-child(even) {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: var(--border-radius);
 }
 
 .table-btn-plus {
@@ -376,7 +544,7 @@ tr:nth-child(even) {
   height: 50px;
   background-color: var(--three-background);
   color: var(--second-background);
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   border: 1px solid var(--three-background);
   text-transform: uppercase;
   letter-spacing: 0.2rem;
@@ -388,7 +556,7 @@ tr:nth-child(even) {
 .footer-btn-cancel {
   width: 195px;
   height: 50px;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   border: 1px solid var(--three-background);
   text-transform: uppercase;
   letter-spacing: 0.2rem;
@@ -413,7 +581,8 @@ tr:nth-child(even) {
   display: none;
 }
 
-.popap::backdrop {
+.popap::before {
+  content: '';
   background-color: rgba(23, 33, 57, 0.5);
   width: 100%;
   height: 100%;
