--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,12 @@ a {
   color: #000;
 }
 
+.page-content-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .synchronization {
   width: 336px;
   height: 50px;
@@ -186,6 +192,19 @@ a {
   height: 50px;
   background-color: var(--second-background);
   border-radius: var(--border-radius);
+  padding-left: 39px;
+  position: relative;
+  font-family: var(--three-font-family);
+  color: #aeaeae;
+  text-transform: uppercase;
+}
+
+.search-img {
+  width: 13.4px;
+  height: 13.4px;
+  position: absolute;
+  right: 266px;
+  margin-top: 2px;
 }
 
 .create-popap {
@@ -604,4 +623,257 @@ tr:nth-child(even) {
   top: calc((100vh / 2) - 250px);
   left: calc((100vw / 2) - 220px);
   z-index: 999;
+  padding: 25px 40px;
+}
+
+.popap-content > h3 {
+  font-family: var(--secondary-font-family);
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 17px;
+}
+
+.name {
+  width: 360px;
+  height: 50px;
+  box-sizing: border-box;
+  background: #f5f5f5;
+  border: 1px solid #e1e1e1;
+  border-radius: var(--border-radius);
+  font-family: 'Galdeano', sans-serif;
+  color: #aeaeae;
+  font-size: 1rem;
+  font-style: normal;
+  padding-left: 25px;
+  margin-bottom: 17px;
+}
+
+.popap-select {
+  width: 360px;
+  height: 50px;
+  margin-bottom: 17px;
+  border-radius: var(--border-radius);
+  padding-left: 25px;
+  font-family: 'Galdeano', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #aeaeae;
+  background: #f5f5f5;
+  border: 1px solid #e1e1e1;
+  outline: 1px solid #e1e1e1;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url('./../images/selectes.svg');
+  background-repeat: no-repeat;
+  background-position: right 25px center;
+}
+
+.name,
+.popap-select:focus,
+.popap-select:focus-visible,
+.popap-select:active {
+  border: 1px solid #e1e1e1;
+  outline: 1px solid #e1e1e1;
+}
+
+option {
+  padding-left: 25px;
+  font-family: 'Galdeano', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #aeaeae;
+  background: #f5f5f5;
+  border: 1px solid #e1e1e1;
+}
+
+.checkbox-popap-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 17px;
+}
+
+.checkbox-text {
+  font-family: 'Galdeano', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  color: var(--three-background);
+}
+
+.checkbox-popap {
+  display: inline-block;
+  height: 28px;
+  line-height: 28px;
+  position: relative;
+  vertical-align: middle;
+  font-size: 14px;
+  user-select: none;
+}
+.checkbox-popap .checkbox-popap-switch {
+  display: inline-block;
+  width: 52px;
+  height: 28px;
+  border-radius: 53px;
+  position: relative;
+  vertical-align: top;
+  background: #efefef;
+  transition: 0.3s;
+}
+
+.checkbox-popap .checkbox-popap-switch:before {
+  content: '';
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 1.5px;
+  left: 1px;
+  background: #ff6600;
+  border-radius: 50%;
+  transition: 0.15s;
+}
+
+.checkbox-popap input[type='checkbox'] {
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.checkbox-popap input[type='checkbox']:checked + .checkbox-popap-switch {
+  background: #efefef;
+}
+
+.checkbox-popap input[type='checkbox']:checked + .checkbox-popap-switch:before {
+  background: #ff6600;
+  transform: translateX(25px);
+}
+
+/* Hover */
+.checkbox-popap input[type='checkbox']:not(:disabled) + .checkbox-popap-switch {
+  cursor: pointer;
+  border-color: #efefef;
+}
+
+.popap-btns {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.popap-btn-save {
+  box-sizing: border-box;
+  width: 193px;
+  height: 50px;
+  background-color: var(--three-background);
+  color: var(--second-background);
+  border-radius: var(--border-radius);
+  border: 1px solid var(--three-background);
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20px;
+}
+
+.popap-btn-cancel {
+  box-sizing: border-box;
+  width: 151px;
+  height: 50px;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--three-background);
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+
+.popap2 {
+  display: none;
+}
+
+.popap2::before {
+  content: '';
+  background-color: rgba(23, 33, 57, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 998;
+}
+
+.popap-active {
+  display: block;
+}
+
+.popap-container {
+  width: 440px;
+  height: 665px;
+  background-color: #ffffff;
+  position: absolute;
+  top: calc((100vh / 2) - 332.5px);
+  left: calc((100vw / 2) - 220px);
+  z-index: 999;
+  padding: 25px 40px;
+}
+
+.popap-content > h3 {
+  font-family: var(--secondary-font-family);
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 17px;
+}
+
+.name2 {
+  color: var(--three-background);
+}
+.popap-select-two {
+  color: var(--three-background);
+}
+
+.popap-content-label {
+  font-family: var(--secondary-font-family);
+  font-size: 1rem;
+  color: var(--three-background);
+}
+
+.popap-btn-delete {
+  width: 195px;
+  height: 50px;
+  box-sizing: border-box;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--three-background);
+  color: var(--three-background);
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popap-btn-delete-img {
+  width: 11.31px;
+  height: 11.31px;
+  margin-right: 10px;
+}
+
+.save {
+  width: 360px;
+  height: 50px;
+  margin-top: 17px;
 }
